--- a/index.html
+++ b/index.html
@@ -1,7 +1,47 @@
-<html>
-				<head>
-				</head>
-				<body>
-								<h1>Sean Chitwood</h1>
-				</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sean Chitwood Resume Showcase</title>
+
+    <!-- Bootstrap -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+<nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top">
+    <ul class="nav bs-docs-sidenav">
+        <li class>Home</li>
+        <li>Work Projects</li>
+        <ul>
+            <li>Performance Tests</li>
+            <ul>
+                <li>Visual Studio</li>
+                <li>Grinder</li>
+            </ul>
+            <li>Managing Test Environments with Fig and Docker</li>
+        </ul>
+        <li>Personal Projects</li>
+        <ul>
+            <li>Hero Combat</li>
+            <li>Traveller</li>
+        </ul>
+    </ul>
+</nav>
+<h1>Sean Chitwood</h1>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
+
