--- a/index.html
+++ b/index.html
@@ -20,20 +20,21 @@
 <nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top">
     <ul class="nav bs-docs-sidenav">
         <li class>Home</li>
-        <li>Work Projects</li>
+        <li>Work Projects
         <ul>
-            <li>Performance Tests</li>
+            <li>Performance Tests
             <ul>
                 <li>Visual Studio</li>
                 <li>Grinder</li>
             </ul>
+            </li>
             <li>Managing Test Environments with Fig and Docker</li>
-        </ul>
-        <li>Personal Projects</li>
+        </ul></li>
+        <li>Personal Projects
         <ul>
             <li>Hero Combat</li>
             <li>Traveller</li>
-        </ul>
+        </ul></li>
     </ul>
 </nav>
 <h1>Sean Chitwood</h1>
