--- a/index.html
+++ b/index.html
@@ -17,32 +17,53 @@
     <![endif]-->
 </head>
 <body>
-<nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top">
-    <ul class="nav bs-docs-sidenav">
-        <li class>Home</li>
-        <li>Work Projects
-        <ul>
-            <li>Performance Tests
-            <ul>
-                <li>Visual Studio</li>
-                <li>Grinder</li>
-            </ul>
-            </li>
-            <li>Managing Test Environments with Fig and Docker</li>
-        </ul></li>
-        <li>Personal Projects
-        <ul>
-            <li>Hero Combat</li>
-            <li>Traveller</li>
-        </ul></li>
-    </ul>
-</nav>
-<h1>Sean Chitwood</h1>
-
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="assets/js/bootstrap.min.js"></script>
+<nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top">
+    <ul class="nav bs-docs-sidenav">
+        <li class>Home</li>
+        <li><a href="resume.html">Resume</a></li>
+        <li>Work Projects
+            <ul>
+                <li>Performance Tests
+                    <ul>
+                        <li>Visual Studio</li>
+                        <li>Grinder</li>
+                    </ul>
+                </li>
+                <li>Managing Test Environments with Fig and Docker</li>
+            </ul>
+        </li>
+        <li>Personal Projects
+            <ul>
+                <li>Hero Combat</li>
+                <li>Traveller</li>
+            </ul>
+        </li>
+    </ul>
+</nav>
+<div class="bs-docs-header" id="content">
+    <div class="container">
+        <h1>Sean Chitwood</h1>
+
+        <p>Software Tester Extraordinaire and End to End Test Lead</p>
+    </div>
+</div>
+<div class="container bs-docs-container">
+    <p>
+        I am a software tester with 14 years experience mostly at Microsoft, working on Windows (2000 and XP),
+        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>center
+        <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
+        security review process, exploratory testing and performance testing.
+    </p>
+    <p>
+        This site is meant to showcase my work, both professional and personal. For obvious reasons I can not share
+        the code of the professional projects but I can share the code that I have written for personal projects.
+        I am a roleplaying game fanatic and my personal projects reflect that.
+    </p>
+</div>
 </body>
 </html>
 
