--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="assets/js/bootstrap.min.js"></script>
-<nav class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top">
-    <ul class="nav bs-docs-sidenav">
+<nav class="hidden-print hidden-xs hidden-sm affix-top">
+    <ul class="nav">
         <li class>Home</li>
         <li><a href="resume.html">Resume</a></li>
         <li>Work Projects
@@ -44,24 +44,26 @@
         </li>
     </ul>
 </nav>
-<div class="bs-docs-header" id="content">
+<div class="header" id="content">
     <div class="container">
         <h1>Sean Chitwood</h1>
 
         <p>Software Tester Extraordinaire and End to End Test Lead</p>
     </div>
 </div>
-<div class="container bs-docs-container">
+<div class="container">
     <p>
         I am a software tester with 14 years experience mostly at Microsoft, working on Windows (2000 and XP),
-        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>center
+        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>enter
         <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
-        security review process, exploratory testing and performance testing.
+        security review process, exploratory testing and performance testing. The past 5 years I have been working with
+        server based applications and SOA web-services in both Windows and Linux based data centers.
     </p>
+
     <p>
         This site is meant to showcase my work, both professional and personal. For obvious reasons I can not share
         the code of the professional projects but I can share the code that I have written for personal projects.
-        I am a roleplaying game fanatic and my personal projects reflect that.
+        I am a role-playing game fanatic and my personal projects reflect that.
     </p>
 </div>
 </body>
