--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <ul class="nav navbar-nav">
 
             <li><a href="resume.html">Resume</a></li>
+
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li>Hero Combat</li>
+                    <li>Traveller</li>
+                </ul>
+            </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li>Performance Tests
@@ -36,12 +43,6 @@
                     <li class="divider"></li>
 
                     <li>Managing Test Environments with Fig and Docker</li>
-                </ul>
-            </li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li>Hero Combat</li>
-                    <li>Traveller</li>
                 </ul>
             </li>
         </ul>
@@ -56,7 +57,8 @@
 </div>
 <div class="container">
     <p>
-        I am a software tester with 14 years experience mostly at Microsoft, working on Windows (2000 and XP),
+        I am a software tester with 14 years experience working for Groupon Getaways (travel). Most of my career was at
+        Microsoft, working on Windows (2000 and XP),
         <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>enter
         <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
         security review process, exploratory testing and performance testing. The past 5 years I have been working with
