--- a/resume.html
+++ b/resume.html
@@ -22,28 +22,32 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="assets/js/bootstrap.min.js"></script>
-<nav class="hidden-print hidden-xs hidden-sm affix-top">
-    <ul class="nav">
-        <li><a href="/">Home</a></li>
-        <li><a>Resume</a></li>
-        <li>Work Projects
-            <ul>
-                <li>Performance Tests
-                    <ul>
-                        <li>Visual Studio</li>
-                        <li>Grinder</li>
-                    </ul>
-                </li>
-                <li>Managing Test Environments with Fig and Docker</li>
-            </ul>
-        </li>
-        <li>Personal Projects
-            <ul>
-                <li>Hero Combat</li>
-                <li>Traveller</li>
-            </ul>
-        </li>
-    </ul>
+<nav class="navbar nav-header hidden-print hidden-xs hidden-sm affix-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Resume</a>
+        <ul class="nav navbar-nav">
+
+            <li><a href="index.html">Home</a></li>
+
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li>Hero Combat</li>
+                    <li>Traveller</li>
+                </ul>
+            </li>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li>Performance Tests
+                    <li class="divider"></li>
+                    <li>Visual Studio</li>
+                    <li>Grinder</li>
+                    <li class="divider"></li>
+
+                    <li>Managing Test Environments with Fig and Docker</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </nav>
 <div class="header" id="content">
     <div class="container-fluid bg-primary">
@@ -60,37 +64,28 @@
         <div class="fine-line col-xs-2 col-sm-2 col-md-2">(206) 651-4360</div>
     </div>
     <div class="row">
-        <div class="fine-line col-md-offset-4 col-sm-offset-4 col-xs-offset-4 col-xs-2 col-sm-2 col-md-2">Seattle 98115</div>
+        <div class="fine-line col-md-offset-4 col-sm-offset-4 col-xs-offset-4 col-xs-2 col-sm-2 col-md-2">Seattle, WA 98115</div>
 
         <div class="fine-line col-xs-2 col-sm-2 col-md-2"><a href="mailto:darkmane@gmail.com">darkmane@gmail.com</a></div>
     </div>
 
+<hr/>
+    <div class="panel">
+        <div class="panel-heading">
+            <h2 class="panel-title">Summary of Qualifications</h2>
+        </div>
+        <div class="panel-body">
 
-<p class=normal style='margin:0in;margin-bottom:.0001pt;mso-pagination:none'>&nbsp;</p>
+            <p><b>Operating Systems: </b>Windows 95- Win8,
+                Windows NT Server - Windows 2012 Server, Mac OS X, 4 Years Linux</p>
 
-<div style='mso-element:para-border-div;border:none;border-top:solid windowtext 1.0pt;
-mso-border-top-alt:solid windowtext .5pt;padding:1.0pt 0in 0in 0in;margin-left:
-4.5pt;margin-right:4.5pt'>
+            <p><b>Languages: </b>C#, Visual Basic, C/C++,
+                SQL, HTML, Java, JavaScript (Node.js and JQuery), XML (XSLT/SOAP)</p>
 
-    <p class=normal style='margin-top:4.5pt;margin-right:0in;margin-bottom:4.5pt;
-margin-left:0in;border:none;mso-border-top-alt:solid windowtext .5pt;
-padding:0in;mso-padding-alt:1.0pt 0in 0in 0in'>
+        </div>
+    </div>
 
-    </p>
-
-</div>
-
-<p class=normal align=center style='margin:0in;margin-bottom:.0001pt;
-text-align:center;mso-pagination:none'><span style='font-size:12.0pt;
-mso-bidi-font-size:10.0pt'>Summary of qualifications</span></p>
-
-<p class=normal style='margin:0in;margin-bottom:.0001pt;mso-pagination:none'><b
-        style='mso-bidi-font-weight:normal'>Operating Systems: </b>Windows 95- Win8,
-    Windows NT Server - Windows 2012 Server, Mac OS X, 4 Years Linux</p>
-
-<p class=normal style='margin:0in;margin-bottom:.0001pt;mso-pagination:none'><b
-        style='mso-bidi-font-weight:normal'>Languages: </b>C#, Visual Basic, C/C++,
-    SQL, HTML, Java/JavaScript, XML (XSLT/SOAP)</p>
+<hr/>
 
 <div style='mso-element:para-border-div;border:none;border-top:solid windowtext 1.0pt;
 mso-border-top-alt:solid windowtext .5pt;padding:1.0pt 0in 0in 0in;margin-left:
