--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
     </div>
 </nav>
 <div class="header" id="content">
-    <div class="container-fluid  bg-primary">
-        <h1>Sean Chitwood</h1>
+    <div class="row bg-primary">
+        <div class="col-md-10 col-xm-10 col-xs-10">
+            <h1 itemprop="p-name">Sean Chitwood</h1>
 
-        <p>Software Tester Extraordinaire and End to End Test Lead</p>
+            <p><span class="p-job-title">Software Tester</span> Extraordinaire and End to End Test Lead</p>
+        </div>
     </div>
 </div>
 <div class="container">
