--- a/grinder.html
+++ b/grinder.html
@@ -30,19 +30,19 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li><a href='hero.html'>Hero Combat</a></li>
-												<li><a href='traveller.html'>Traveller</a></li>
+                    <li>Hero Combat</li>
+                    <li>Traveller</li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li>Performance Tests</li>
+                    <li>Performance Tests
                     <li class="divider"></li>
-										<li><a href='vsts.html'>Visual Studio</a></li>
-										<li><a href='grinder.html'>Grinder<a/></li>
+                    <li>Visual Studio</li>
+                    <li>Grinder</li>
                     <li class="divider"></li>
 
-										<li><a href='test_env.html'>Managing Test Environments</a></li>
+                    <li>Managing Test Environments with Fig and Docker</li>
                 </ul>
             </li>
         </ul>
