--- a/resume.html
+++ b/resume.html
@@ -29,22 +29,20 @@
 
             <li><a href="index.html">Home</a></li>
 
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal
-                Projects<span class="caret"></span></a>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li>Hero Combat</li>
-                    <li>Traveller</li>
+									<li><a href='hero.html'>Hero Combat</a></li>
+									<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
             </li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work
-                Projects<span class="caret"></span></a>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li>Performance Tests
+												<li>Performance Tests</li>
                     <li class="divider"></li>
-                    <li>Visual Studio</li>
-                    <li>Grinder</li>
+										<li><a href='vsts.html'>Visual Studio</a></li>
+										<li><a href='grinder.html'>Grinder<a/></li>
                     <li class="divider"></li>
-                    <li>Managing Test Environments</li>
+										<li><a href='test_env.html'>Managing Test Environments</a></li>
                 </ul>
             </li>
         </ul>
