--- a/traveller.html
+++ b/traveller.html
@@ -36,13 +36,13 @@
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li>Performance Tests</li>
+                    <li>Performance Tests
                     <li class="divider"></li>
 										<li><a href='vsts.html'>Visual Studio</a></li>
 										<li><a href='grinder.html'>Grinder<a/></li>
                     <li class="divider"></li>
 
-										<li><a href='test_env.html'>Managing Test Environments</a></li>
+                    <li>Managing Test Environments with Fig and Docker</li>
                 </ul>
             </li>
         </ul>
