--- a/hero.html
+++ b/hero.html
@@ -26,11 +26,11 @@
         <a class="navbar-brand" href="#">Home</a>
         <ul class="nav navbar-nav">
 
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="resume.html">Hero Combat</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li><a href='hero.html'>Hero Combat</a></li>
+												<li>Hero Combat</li>
 												<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
             </li>
