--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 												<li>Performance Tests</li>
                     <li class="divider"></li>
 										<li><a href='vsts.html'>Visual Studio</a></li>
-										<li><a href='grinder.html'>Grinder<a/></li>
+										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
 
 										<li><a href='test_env.html'>Managing Test Environments</a></li>
