--- a/hero.html
+++ b/hero.html
@@ -23,14 +23,16 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <nav class="navbar nav-header hidden-print hidden-xs hidden-sm affix-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="#">Hero Combat</a>
         <ul class="nav navbar-nav">
 
-            <li><a href="resume.html">Hero Combat</a></li>
+            <li><a href="index.html">Home</a></li>
+
+            <li><a href="resume.html">Resume</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li>Hero Combat</li>
+												<li><a href='hero.html'>Hero Combat</a></li>
 												<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
             </li>
