--- a/hero.html
+++ b/hero.html
@@ -32,7 +32,7 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li><a href='hero.html'>Hero Combat</a></li>
+												<li>Hero Combat</li>
 												<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
             </li>
