--- a/traveller.html
+++ b/traveller.html
@@ -23,15 +23,16 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <nav class="navbar nav-header hidden-print hidden-xs hidden-sm affix-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="#">Traveller</a>
         <ul class="nav navbar-nav">
 
+            <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
 												<li><a href='hero.html'>Hero Combat</a></li>
-												<li><a href='traveller.html'>Traveller</a></li>
+												<li>Traveller</li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
@@ -39,10 +40,9 @@
                     <li>Performance Tests
                     <li class="divider"></li>
 										<li><a href='vsts.html'>Visual Studio</a></li>
-										<li><a href='grinder.html'>Grinder<a/></li>
+										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
-
-                    <li>Managing Test Environments with Fig and Docker</li>
+                    <li>Managing Test Environments</li>
                 </ul>
             </li>
         </ul>
@@ -58,20 +58,11 @@
     </div>
 </div>
 <div class="container">
-    <p>
-        I am a software tester with 14 years experience working for Groupon Getaways (travel). Most of my career was at
-        Microsoft, working on Windows (2000 and XP),
-        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>enter
-        <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
-        security review process, exploratory testing and performance testing. The past 5 years I have been working with
-        server based applications and SOA web-services in both Windows and Linux based data centers.
-    </p>
+		<p>This project started out as a library of tools for <a href='http://www.farfuture.net'>Traveller</a>. I started helping out by cleaning up the implementation.</p>
 
-    <p>
-        This site is meant to showcase my work, both professional and personal. For obvious reasons I can not share
-        the code of the professional projects but I can share the code that I have written for personal projects.
-        I am a role-playing game fanatic and my personal projects reflect that.
-    </p>
+		<p>Now I am working to convert it to a REST service and show off how Linux Containers can be used to improve the development process. It will have Docker files and fig.yml files to quickly allow deployment and testing.</p>
+
+		<p><a href='http://github.com/darkmane/classictraveller'>Github</a></p>
 </div>
 </body>
 </html>
