--- a/traveller.html
+++ b/traveller.html
@@ -42,7 +42,7 @@
 										<li><a href='vsts.html'>Visual Studio</a></li>
 										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
-                    <li>Managing Test Environments</li>
+										<li><a href='test_env.html'>Managing Test Environments</a></li>
                 </ul>
             </li>
         </ul>
