--- a/vsts.html
+++ b/vsts.html
@@ -23,15 +23,16 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <nav class="navbar nav-header hidden-print hidden-xs hidden-sm affix-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="#">Visual Studio</a>
         <ul class="nav navbar-nav">
 
+            <li><a href="resume.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-												<li><a href='hero.html'>Hero Combat</a></li>
-												<li><a href='traveller.html'>Traveller</a></li>
+										<li><a href='hero.html'>Hero Combat</a></li>
+										<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
@@ -39,10 +40,10 @@
                     <li>Performance Tests
                     <li class="divider"></li>
 										<li><a href='vsts.html'>Visual Studio</a></li>
-										<li><a href='grinder.html'>Grinder<a/></li>
+										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
 
-                    <li>Managing Test Environments with Fig and Docker</li>
+										<li><a href='test_env.html'>Managing Test Environments</a></li>
                 </ul>
             </li>
         </ul>
