--- a/hero.html
+++ b/hero.html
@@ -44,7 +44,7 @@
 										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
 
-                    <li>Managing Test Environments with Fig and Docker</li>
+										<li><a href='test_env.html'>Managing Test Environments</a></li>
                 </ul>
             </li>
         </ul>
