--- a/grinder.html
+++ b/grinder.html
@@ -59,20 +59,16 @@
     </div>
 </div>
 <div class="container">
-    <p>
-        I am a software tester with 14 years experience working for Groupon Getaways (travel). Most of my career was at
-        Microsoft, working on Windows (2000 and XP),
-        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>enter
-        <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
-        security review process, exploratory testing and performance testing. The past 5 years I have been working with
-        server based applications and SOA web-services in both Windows and Linux based data centers.
-    </p>
+				<p>
+				Groupon uses an open source project named <a href='http://grinder.sourceforge.net/'>Grinder</a> to execute performance testing. I worked with an internal virtual team to create a web user interface with the following goals:
+				</p>
+				<ul>
+			  	<li>Start and stop tests</li>
+		  		<li>Provide a simple UI to prevent confusion and <i>accidentally</i> overloading servers</li>
+					<li>Secure the tool to prevent unauthorized access</li>
+					<li>Prevent tests from interfering with each otehr</li>
+				</ul>
 
-    <p>
-        This site is meant to showcase my work, both professional and personal. For obvious reasons I can not share
-        the code of the professional projects but I can share the code that I have written for personal projects.
-        I am a role-playing game fanatic and my personal projects reflect that.
-    </p>
 </div>
 </body>
 </html>
