--- a/src/public/test_env.html
+++ b/src/public/test_env.html
@@ -43,7 +43,7 @@
 										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
 
-                    <li>Managing Test Environments with Fig and Docker</li>
+										<li>Improving Build and Deployment with Docker</li>
                 </ul>
             </li>
         </ul>
