--- a/src/public/vsts.html
+++ b/src/public/vsts.html
@@ -43,7 +43,7 @@
 										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
 
-										<li><a href='test_env.html'>Managing Test Environments</a></li>
+										<li><a href='test_env.html'>Improving Build and Deployment with Docker</a></li>
                 </ul>
             </li>
         </ul>
