Change Performance testing text

--- a/src/public/grinder.html
+++ b/src/public/grinder.html
@@ -66,10 +66,10 @@
 			  	<li>Start and stop tests</li>
 		  		<li>Provide a simple UI to prevent confusion and <i>accidentally</i> overloading servers</li>
 					<li>Secure the tool to prevent unauthorized access</li>
-					<li>Prevent tests from interfering with each otehr</li>
+					<li>Prevent tests from interfering with each other</li>
 	</ul>
 
-	    <p>We were able to deliver thses goals in less than a week and present it in a company wide forum for evaluation.</p>
+	    <p>We were able to deliver these goals in less than a week and present it in a company wide forum for evaluation.</p>
 
 				<p>
 					In addition I created a framework to simplify the script writing process, standardizing how test distributions were created, removing the need for creating a TestRunner class (boilerplate code), and simplifying the use of data for datadriven tests.
@@ -80,6 +80,13 @@
 								<li>Google Calendar integration to prevent scheduling conflicts</li>
 								<li>Github support so all scripts will be under source control</li>
 				</ul>
+				<hr/>
+				<h2>JMeter Migration</h2>
+				<p>
+				Experience with Grinder has shown that scripts are difficult to maintain and results require extensive processing for graphing and reporting. This lead to a search for better tools and a discussion of the feasability of using JMeter as a replacement for Grinder.</p>
+
+				<p>I lead the effort to create a base set of functions for load and stress tests. This included creating a system of Docker containers and docker-compose files for testing in Google Cloud Environment as a proof of concept.
+				</p>
 </div>
 </body>
 </html>
