--- a/src/public/gw2craft.html
+++ b/src/public/gw2craft.html
@@ -23,17 +23,18 @@
 <script src="js/bootstrap.min.js"></script>
 <nav class="navbar nav-header hidden-print hidden-xs hidden-sm affix-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Grinder</a>
+        <a class="navbar-brand" href="#">Hero Combat</a>
         <ul class="nav navbar-nav">
 
             <li><a href="index.html">Home</a></li>
+
             <li><a href="resume.html">Resume</a></li>
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-										<li><a href='gw2craft.html'>Guild Wars 2 Crafting Tool</a></li>
-										<li><a href='hero.html'>Hero Combat</a></li>
-										<li><a href='traveller.html'>Traveller</a></li>
+												<li>Guild Wars 2 Crafting Tool</li>
+												<li><a href='hero.html'>Hero Combat</a></li>
+												<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Work Projects<span class="caret"></span></a>
@@ -60,27 +61,20 @@
     </div>
 </div>
 <div class="container">
-				<p>
-				Groupon uses an open source project named <a href='http://grinder.sourceforge.net/'>Grinder</a> to execute performance testing. I worked with an internal virtual team to create a web user interface with the following objectives:
-				</p>
-				<ul>
-			  	<li>Start and stop tests</li>
-		  		<li>Provide a simple UI to prevent confusion and <i>accidentally</i> overloading servers</li>
-					<li>Secure the tool to prevent unauthorized access</li>
-					<li>Prevent tests from interfering with each otehr</li>
-	</ul>
+		<p>
+		This project was started to continue working with HTML5 responsive web applications and to create a tool for <a href='http://www.guildwars2.com'>Guild Wars 2</a> .
+		</p>
 
-	    <p>We were able to deliver thses goals in less than a week and present it in a company wide forum for evaluation.</p>
-
-				<p>
-					In addition I created a framework to simplify the script writing process, standardizing how test distributions were created, removing the need for creating a TestRunner class (boilerplate code), and simplifying the use of data for datadriven tests.
+		<p>
+		The first phase of the project uses the GW2 API to produce a list of all craftable items and all the ingredients needed to craft them. It uses the <a href='http://www.polymer-project.org'>Polymer Starter Ket</a> as a framework for a responsive web application. Then extending it with some custom elements. Using web service workers to reduce the requests to the API server and inject some custom responses.
+		</p>
+    <p>
+        The second phase will continue to use localstorage and the newer version of the GW2 API to show a user a personalized version of the ingredient list.
 				</p>
-				<p>The virtual team continues to improve the system by adding:</p>
-				<ul>
-								<li>Integration with Jira to only allow approved tests to run</li>
-								<li>Google Calendar integration to prevent scheduling conflicts</li>
-								<li>Github support so all scripts will be under source control</li>
-				</ul>
+
+				<p><a href='https://github.com/darkmane/gw2-craftingtool'>Git Repo</a></p>
+
+				<p><a href='http://gw2craft.darkmane.me'>Hosted Instance</a></p>
 </div>
 </body>
 </html>
