--- a/src/public/hero.html
+++ b/src/public/hero.html
@@ -32,6 +32,7 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
+										    <li><a href='gw2craft.html'>Guild Wars 2 Crafting Tool</a></li>
 												<li>Hero Combat</li>
 												<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
