--- a/src/public/vsts.html
+++ b/src/public/vsts.html
@@ -31,6 +31,7 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Personal Projects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
+							  	  <li><a href='gw2craft.html'>Guild Wars 2 Crafting Tool</a></li>
 										<li><a href='hero.html'>Hero Combat</a></li>
 										<li><a href='traveller.html'>Traveller</a></li>
                 </ul>
